parsing for meta classes and code generation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,8 +20,8 @@ set(TEST_SOURCES
 add_executable(tests ${TEST_SOURCES})
 target_include_directories(tests PRIVATE
   ${PROJECT_SOURCE_DIR}/include
-  ${PROJECT_SOURCE_DIR}/parsers/static_reflection
-  ${PROJECT_SOURCE_DIR}/parsers/meta_classes/
+  ${PROJECT_SOURCE_DIR}/extern/static_reflection
+  ${PROJECT_SOURCE_DIR}/extern/meta_classes/
   )
 find_package(Boost 1.67 REQUIRED COMPONENTS system)
 target_link_libraries(tests PRIVATE Catch Boost::boost)
@@ -50,14 +50,15 @@ function(preprocess target preprocessor_dir)
     add_custom_command(
       OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/out/meta.cpp
       COMMAND main 2
-      ${CMAKE_CURRENT_BINARY_DIR}/out/meta.cpp
       ${CMAKE_SOURCE_DIR}/${src}
+      ${CMAKE_CURRENT_BINARY_DIR}/out/meta.cpp
       WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
       DEPENDS main ${src}_target
       COMMENT "Generating meta classes for ${src}"
       )
 
     add_executable(meta ${CMAKE_CURRENT_BINARY_DIR}/out/meta.cpp)
+    target_include_directories(meta PRIVATE ${preprocessor_dir}/extern/meta_classes/meta_include)
 
     # TODO: throw exception for absolute path or relative path to a lower directory
     # OR maybe just message to the user and continue?
@@ -73,7 +74,7 @@ function(preprocess target preprocessor_dir)
       DEPENDS ${CMAKE_SOURCE_DIR}/${src} main meta
       )
   endforeach()
-  target_include_directories(${target} PRIVATE ${preprocessor_dir}/parsers/static_reflection/out_include)
+  target_include_directories(${target} PRIVATE ${preprocessor_dir}/extern/static_reflection/out_include)
   target_include_directories(${target} BEFORE PRIVATE ${CMAKE_CURRENT_BINARY_DIR}/include)
 endfunction()
 
@@ -82,7 +83,7 @@ add_executable(main ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp)
 target_compile_features(main INTERFACE cxx_std_17)
 target_include_directories(main PRIVATE
   ${PROJECT_SOURCE_DIR}/include
-  ${PROJECT_SOURCE_DIR}/parsers/static_reflection
-  ${PROJECT_SOURCE_DIR}/parsers/meta_classes/
+  ${PROJECT_SOURCE_DIR}/extern/static_reflection
+  ${PROJECT_SOURCE_DIR}/extern/meta_classes/
   )
 target_link_libraries(main PRIVATE Boost::boost Boost::system -lstdc++fs -lpthread)
