fix tests and regressions in the new expressions parser

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -10,7 +10,7 @@ set(TEST_SOURCES
   tests_main.cpp
   test_std_rules.cpp
   test_meta_classes_rules.cpp
-  #test_std_parser.cpp
+  test_std_parser.cpp
   )
 add_executable(tests ${TEST_SOURCES})
 target_include_directories(tests PRIVATE
