--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,9 +1,6 @@
 cmake_minimum_required(VERSION 3.0)
 
-# Prepare "Catch" library for other executables TODO move catch inside project?
-set(CATCH_INCLUDE_DIR /usr/local/include/catch/)
-add_library(Catch INTERFACE)
-target_include_directories(Catch INTERFACE ${CATCH_INCLUDE_DIR})
+find_package(Catch2 REQUIRED)
 
 # Make test executable
 set(TEST_SOURCES
@@ -19,5 +16,5 @@ target_include_directories(tests PRIVATE
   ${zero_preprocessor_SOURCE_DIR}/extern/meta_classes/
   )
 
-target_link_libraries(tests PRIVATE Catch Boost::boost)
+target_link_libraries(tests PRIVATE Catch2::Catch2 Boost::boost)
 add_test(NAME test COMMAND tests)
