--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.0)
+cmake_minimum_required(VERSION 3.13)
 
 find_package(Catch2 REQUIRED)
 
@@ -16,5 +16,21 @@ target_include_directories(tests PRIVATE
   ${zero_preprocessor_SOURCE_DIR}/extern/meta_classes/
   )
 
+target_compile_options(tests PRIVATE
+  $<$<CXX_COMPILER_ID:GNU>:-ftemplate-backtrace-limit=0>
+  $<$<CXX_COMPILER_ID:Clang>:-ftemplate-backtrace-limit=0>
+  )
+
+target_compile_options(tests PRIVATE
+  $<$<CXX_COMPILER_ID:GNU>:-fsanitize=address -fno-omit-frame-pointer>
+  $<$<CXX_COMPILER_ID:Clang>:-fsanitize=address -fno-omit-frame-pointer>
+  )
+
+target_link_options(tests PRIVATE
+  $<$<CXX_COMPILER_ID:GNU>:-fsanitize=address>
+  $<$<CXX_COMPILER_ID:Clang>:-fsanitize=address>
+  )
+
 target_link_libraries(tests PRIVATE Catch2::Catch2 Boost::boost)
+
 add_test(NAME test COMMAND tests)
